--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,7 @@ script:
   - make lint
   - make docker_build
   - make docker_push
+deploy:
+  provider: heroku
+  aapp: floating-mountain-66927
+  api_key: ${HEROKU_API_KEY}
