--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ script:
   - make test
   - make lint
   - make docker_build
+  - make docker_run
+  - python test-api/api.py
   - make docker_push
+
 deploy:
   provider: heroku
   app: floating-mountain-66927
